--- a/templates/home.html
+++ b/templates/home.html
@@ -13,10 +13,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <style>
-        .form-control{
-        padding: 1.375rem .75rem !important;
-    }
+        .form-control {
+            padding: 1.375rem .75rem !important;
+        }
     </style>
+
+    <script>
+        function validateForm(event) {
+            event.preventDefault();
+            var taskInput = document.getElementById('taskInput');
+            var errorDiv = document.getElementById('errorDiv');
+            if (taskInput.value.trim() === "") {
+                errorDiv.innerHTML = "Task cannot be empty.";
+                errorDiv.style.display = "block";
+            } else {
+                errorDiv.style.display = "none";
+                event.target.submit();
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="container">
@@ -26,23 +41,18 @@
             <p class="text-muted">{% now "jS F Y" %}</p>
             <div class="col-md-7 col-lg-7" style="height: 450px; overflow: scroll;">
                 <!-- List of all the tasks for the day -->
-                    
-                    {% for task in tasks %}
+                {% for task in tasks %}
                     <div class="card m-1">
-                    <div class="card-body">
-                       {{ task.task }}
-                        <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
-                        </span>
+                        <div class="card-body">
+                            {{ task.task }}
+                            <span style="position: relative; float: right;">
+                                <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                                <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                                <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            </span>
+                        </div>  
                     </div>  
-                </div>  
-                    {% endfor %}
-                        
-                    
-                
-               
+                {% endfor %}
             </div>
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
@@ -57,14 +67,15 @@
         <div class="row">
             <div class="col-md-6 col-lg-6 p-0" style="position: absolute; bottom: 50px;">
                 <!-- To Do Form -->
-                <form action="{% url 'addTask' %}" method="POST">
+                <form action="{% url 'addTask' %}" method="POST" onsubmit="validateForm(event)">
                     {% csrf_token %}
                     <div class="form-group">
                         <span style="display: flex;">
-                            <input name="task" type="text" class="form-control" placeholder="Add a task">
+                            <input id="taskInput" name="task" type="text" class="form-control" placeholder="Add a task">
                             <button type="submit" class="btn btn-primary" style="width: 200px;"><i class="fa fa-plus"></i> Add</button>
                         </span>
                     </div>
+                    <div id="errorDiv" class="alert alert-danger mt-2" style="display: none;"></div>
                 </form>
             </div>
         </div>
